# lambda-pi

./: LICENSE  README.md  lambda-pi.cabal  stack.yaml
src/: DependentlyTyped.hs  SimplyTyped.hs
